feat(auth): add scalable user management and role-aware tenant security